--- a/animation.css
+++ b/animation.css
@@ -9,8 +9,8 @@
   50% { left:0px; top:0px; }
 }
 @keyframes icon3 {
-    from {transform: scale(0);}
-    to {transform: scale(1);}
+    0% {transform: scale(0);}
+    50% {transform: scale(1);}
 }
 @keyframes icon4 {
   0% { right:-1200px; top:0px; }
@@ -25,15 +25,21 @@
 
 @keyframes Polig{
 
-  0% {left: -20vw; background-color: white; opacity: 0.1}
-  100% {left: 50vw; background-color: green;opacity: 1}
+  0% {left: -20px; background-color: white; opacity: 0.1}
+  100% {left: 33.7vw;;background-color: rgba(0, 0, 0, 0.5);opacity: 1}
 }
 @keyframes Polig1{
 
-  0% { background-color: green }
-  100% { background-color:green ;}
+  0% { background-color: rgba(0, 0, 0, 0.5); }
+  100% { background-color:rgba(0, 0, 0, 0.5) ;}
 }
 @keyframes load{
   0% { color: black; }
   100% { color: white;}
 }
+
+/*@keyframes effect{
+  0% { left:-5px;transform: scale(1);}
+  50% { left:-5px;transform: scale(1.1);}
+  100% { color: white;}
+}*/
